Fix dashboard small screen overlap

--- a/app/assets/stylesheets/dashboard/recent_work.scss
+++ b/app/assets/stylesheets/dashboard/recent_work.scss
@@ -68,8 +68,6 @@
 
 @media (max-width: 1100px) {
   .dashboard-container .recent-work-widget {
-    min-height: 450px;
-
     .widget-title {
       line-height: 36px;
     }
